# winzig_calc

./: CMakeLists.txt  README.md  README_zh.md  base.c  calc.c  defs.h  display.c  interpreter.c  main.c  mathfuns.c  parser.c  parser.h  test.wz  tests.c  think.md  tokenizer.c  tokenizer.h  winzig_calc.c  winzig_calc.h
